[project]
name = "tossinvest-core"
version = "0.0.2"
description = "Python client for Toss Securities (토스증권) Open API"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Gunhoon Lee", email = "gunhoon@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["tossinvest", "toss", "securities", "openapi", "investment", "trading"]
dependencies = [
  "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/gunhoon/tossinvest-core"
"Bug Tracker" = "https://github.com/gunhoon/tossinvest-core/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
