[project]
name = "tossinvest-core"
version = "0.1.0"
description = "Toss Securities Open API Client for Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Gunhoon Lee", email="gunhoon@gmail.com" },
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
